--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,20 +1,28 @@
+/*-- General Styling --*/
+
 body {
   background-color: #F6F6F6;
   padding: 20px;
   margin: 0;
 }
+
 h1, h2, p, ul, li {
   font-family: sans-serif;
 }
+
+/*-- Nav Styling --*/
+
 ul.header li {
   display: inline;
   list-style-type: none;
   margin: 0;
 }
+
 ul.header {
   background-color: #111;
   padding: 0;
 }
+
 ul.header li a {
   color: #FFF;
   font-weight: bold;
@@ -22,18 +30,19 @@ ul.header li a {
   padding: 20px;
   display: inline-block;
 }
+
+.active {
+  background-color: #0099FF;
+}
+
+/*-- Content Styling --*/
+
 .content {
   background-color: #FFF;
   padding: 20px;
 }
+
 .content h2 {
   padding: 0;
   margin: 0;
-}
-.content li {
-  margin-bottom: 10px;
-}
-
-.active {
-  background-color: #0099FF;
 }
